# resume-tailor

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
resume_tailor/: __init__.py  assemble.py  cli.py  io.py  latex.py  models.py  ranked_selection.py  ranking.py  render.py  selection.py  selection_prompt.py  text.py
resume_tailor/templates/: jakes_resume.tex.j2
skills/software-resume-tailor/: SKILL.md
tests/: test_assemble.py  test_latex.py  test_ranked_selection.py  test_render.py  test_selection.py  test_selection_prompt.py  test_text.py
